# spline-verify

./: .gitignore  README.md  pyproject.toml
examples/: EXAMPLES.md  bouncing_ball.py  demonstration.py  glucose_insulin.py  harmonic_oscillator.py  linear_system.py  quadrotor.py  relay_feedback.py  thermostat.py  vehicle_braking.py
results/benchmarks/: benchmark_results.json  hard_benchmark_results.json
results/comparison/: comparison_results.json
scripts/: README.md  run_benchmarks.py  run_comparison.py
src/miller_sznaier/: __init__.py  distance_estimator.py  problem.py
src/miller_sznaier/examples/: __init__.py  comparison.py  flow_system.py
src/spline_verify/: __init__.py
src/spline_verify/benchmarks/: __init__.py  ablation.py  ground_truth.py  runner.py  scalability.py  sensitivity.py
src/spline_verify/dynamics/: __init__.py  base.py  integrators.py  ode.py  switching.py  trajectory.py
src/spline_verify/geometry/: __init__.py  sampling.py  sets.py
src/spline_verify/splines/: __init__.py  approximation.py  bspline.py  multivariate.py  optimization.py  piecewise.py
src/spline_verify/utils/: __init__.py  visualization.py
src/spline_verify/verification/: __init__.py  error_bounds.py  objective.py  switching.py  verifier.py
tests/: test_benchmarks.py  test_integrators.py  test_sets.py  test_splines.py  test_switching.py  test_verification.py
