[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spline-verify"
version = "0.1.0"
description = "Safety verification for cyber-physical systems via spline approximation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Samuel Sasaki" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spline_verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
